--- a/example/CMakeLists.txt
+++ b/example/CMakeLists.txt
@@ -2,18 +2,32 @@ cmake_minimum_required(VERSION 3.19.2)
 
 set(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/../)
 
-set(BOOST_VERSION_MAJOR 1)
-set(BOOST_VERSION_MINOR 80)
-set(BOOST_VERSION_PATCH 0)
-set(BOOST_VERSION "${BOOST_VERSION_MAJOR}.${BOOST_VERSION_MINOR}.${BOOST_VERSION_PATCH}")
-find_package(Boost)
-if(NOT Boost_FOUND OR NOT BOOST_VERSION STREQUAL ${Boost_VERSION})
-    set(BOOST_FETCH_WAY https)
-    set(BOOST_ROOT ${CMAKE_CURRENT_SOURCE_DIR}/../3rd/boost)
-    set(Boost_INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/../deps/include/boost)
-    set(Boost_LIBRARY_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/../deps/lib)
-    include(FindFetchBoost)
-endif()
+set(LIBCPP_VERSION_MAJOR 1)
+set(LIBCPP_VERSION_MINOR 0)
+set(LIBCPP_VERSION_PATCH 0)
+set(LIBCPP_FETCH_WAY git)
+set(LIBCPP_FETCH_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../3rd/libcpp)
+set(LIBCPP_PREFIX ${CMAKE_CURRENT_SOURCE_DIR}/../deps/include/libcpp)
+include(FindFetchLibcpp)
+
+# set(BOOST_VERSION_MAJOR 1)
+# set(BOOST_VERSION_MINOR 75)
+# set(BOOST_VERSION_PATCH 0)
+# # find_package(Boost)
+# # if(NOT Boost_FOUND OR 
+# #     NOT "${BOOST_VERSION_MAJOR}.${BOOST_VERSION_MINOR}.${BOOST_VERSION_PATCH}" STREQUAL ${Boost_VERSION})
+# #     set(BOOST_FETCH_WAY https)
+# #     set(BOOST_ROOT ${CMAKE_CURRENT_SOURCE_DIR}/../3rd/boost)
+# #     set(Boost_INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/../deps/include/boost)
+# #     set(Boost_LIBRARY_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/../deps/lib)
+# #     include(FindFetchBoost)
+# # endif()
+
+# set(BOOST_FETCH_WAY https)
+# set(BOOST_FETCH_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../3rd/boost)
+# set(BOOST_STAGEDIR ${CMAKE_CURRENT_SOURCE_DIR}/../deps/lib)
+# set(BOOST_PREFIX ${CMAKE_CURRENT_SOURCE_DIR}/../deps/include/boost)
+# include(FindFetchBoost)
 
 # find_package(ZeroMQ)
 # if(NOT ZeroMQ_FOUND)
