--- a/example/CMakeLists.txt
+++ b/example/CMakeLists.txt
@@ -5,9 +5,9 @@ set(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/../)
 set(LIBCPP_VERSION_MAJOR 1)
 set(LIBCPP_VERSION_MINOR 0)
 set(LIBCPP_VERSION_PATCH 0)
-set(LIBCPP_FETCH_WAY git)
-set(LIBCPP_FETCH_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../3rd/libcpp)
-set(LIBCPP_PREFIX ${CMAKE_CURRENT_SOURCE_DIR}/../deps/include/libcpp)
+set(LIBCPP_FETCH_WAY https)
+# set(LIBCPP_FETCH_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../3rd/libcpp)
+# set(LIBCPP_PREFIX ${CMAKE_CURRENT_SOURCE_DIR}/../deps/include/libcpp)
 include(FindFetchLibcpp)
 
 # set(BOOST_VERSION_MAJOR 1)
